Шапка и другие страницы

--- a/source/sass/style.scss
+++ b/source/sass/style.scss
@@ -5,3 +5,5 @@
 @import "global/container.scss";
 @import "global/mixin.scss";
 @import "blocks/header.scss";
+@import "blocks/search.scss";
+@import "blocks/toggle.scss";
