--- a/source/sass/blocks/header.scss
+++ b/source/sass/blocks/header.scss
@@ -33,22 +33,22 @@
   display: flex;
   flex-wrap: wrap;
   justify-content: space-between;
-  padding-top: 42px;
-  padding-bottom: 18px;
+  align-items: center;
+  padding-top: 19px;
+  padding-right: 93px;
+  padding-left: 95px;
 }
 
 .header-toggle {
   display: none;
 }
 
+
 .header-logo {
-  position: absolute;
-  content: "";
-  top: 30px;
-  left: 50%;
   display: block;
   width: 66px;
   height: 66px;
+  padding-top: 11px;
   transform: translateX(-50%);
 
   svg {
@@ -60,14 +60,14 @@
   font-style: normal;
   font-weight: 500;
   font-size: 14px;
-  margin-right: 180px;
 }
 
-.header__cart {
-  position: absolute;
-  content: "";
-  top: 42px;
-  right: 100px;
+.header__login-cart {
+  display: flex;
+  width: 150px;
+  justify-content: space-between;
+  padding-left: 26px;
+  padding-right: 7px;
   font-style: normal;
   font-weight: 500;
   font-size: 14px;
@@ -80,7 +80,7 @@
 
 .header-nav {
   width: 100%;
-  margin-top: 48px;
+  margin-top: 30px;
 }
 
 .header__site-menu {
