--- a/source/sass/global/global.scss
+++ b/source/sass/global/global.scss
@@ -22,8 +22,8 @@ body {
   font-size: 16px;
   font-weight: 400;
   word-wrap: normal;
-  color: white;
-  background-color: $background;
+  color: $black;
+  background-color: $white;
 }
 
 main {
