--- a/source/sass/style.scss
+++ b/source/sass/style.scss
@@ -7,3 +7,6 @@
 @import "blocks/header.scss";
 @import "blocks/search.scss";
 @import "blocks/toggle.scss";
+@import "blocks/footer.scss";
+@import "blocks/social.scss";
+@import "blocks/info.scss";
