--- a/source/sass/blocks/header.scss
+++ b/source/sass/blocks/header.scss
@@ -2,6 +2,12 @@
   position: relative;
   width: 100%;
 
+  @media (max-width: $breakpoint-tablet) {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+  }
+
   &::after {
     position: absolute;
     content: "";
@@ -10,6 +16,10 @@
     width: 100%;
     height: 1px;
     background-color: $line;
+
+    @media (max-width: $breakpoint-tablet) {
+      top: 123px;
+    }
   }
 
   a {
@@ -34,9 +44,15 @@
   flex-wrap: wrap;
   justify-content: space-between;
   align-items: center;
-  padding-top: 19px;
+  padding-top: 30px;
   padding-right: 93px;
   padding-left: 95px;
+
+  @media (max-width: $breakpoint-tablet) {
+    flex-wrap: nowrap;
+    padding-right: 161px;
+    padding-left: 165px;
+  }
 }
 
 .header-toggle {
@@ -48,11 +64,15 @@
   display: block;
   width: 66px;
   height: 66px;
-  padding-top: 11px;
   transform: translateX(-50%);
 
   svg {
     fill: $brown;
+  }
+
+  @media (max-width: $breakpoint-mobile) {
+    width: 52px;
+    height: 52px;
   }
 }
 
@@ -60,6 +80,10 @@
   font-style: normal;
   font-weight: 500;
   font-size: 14px;
+
+  @media (max-width: $breakpoint-tablet) {
+    display: none;
+  }
 }
 
 .header__login-cart {
@@ -73,18 +97,40 @@
   font-size: 14px;
   line-height: 21px;
 
+  @media (max-width: $breakpoint-tablet) {
+    width: 40px;
+    justify-content: center;
+    align-items: center;
+    padding: 0;
+  }
+
+  @media (max-width: $breakpoint-tablet) {
+    span {
+      display: none;
+    }
+  }
+
   svg {
     display: none;
+
+    @media (max-width: $breakpoint-tablet) {
+      display: block;
+      stroke: $black;
+    }
   }
 }
 
 .header-nav {
   width: 100%;
   margin-top: 30px;
+
+  @media (max-width: $breakpoint-tablet) {
+    display: none;
+  }
 }
 
 .header__site-menu {
-  @include no-outline;
+  @include no-list;
   display: flex;
   flex-wrap: wrap;
   justify-content: center;
@@ -98,6 +144,15 @@
     font-weight: 500;
     font-size: 16px;
     line-height: 24px;
+
+    &:hover,
+    &:focus {
+      color: $brown;
+    }
+
+    &:active {
+      opacity: 0.7;
+    }
   }
 
   li:not(:last-child) {
