--- a/source/sass/blocks/search.scss
+++ b/source/sass/blocks/search.scss
@@ -2,12 +2,7 @@
   width: 214px;
 
   @media (max-width: $breakpoint-tablet) {
-    width: 100%;
-    margin-top: 10px;
-  }
-
-  @media (max-width: $breakpoint-mobile) {
-    margin-top: 28px;
+    display: none;
   }
 }
 
