--- a/source/sass/blocks/toggle.scss
+++ b/source/sass/blocks/toggle.scss
@@ -2,16 +2,15 @@
   display: none;
 
   @media (max-width: $breakpoint-tablet) {
-    position: absolute;
-    top: 51px;
-    left: 38px;
     display: block;
     width: 38px;
     height: 27px;
+    margin-right: 64px;
     background-color: transparent;
     cursor: pointer;
     border: none;
     z-index: 2;
+    stroke: $black;
 
     &:hover,
     &:focus {
