--- a/source/sass/global/container.scss
+++ b/source/sass/global/container.scss
@@ -1,13 +1,17 @@
 .container {
-  margin: 0 auto;
   width: 100%;
   max-width: 1366px;
+  
+  margin: 0 auto;
+  padding: 0 15px;
 
   @media (max-width: $breakpoint-tablet) {
     min-width: $width-tablet;
+    padding: 0 45px;
   }
 
   @media (max-width: $breakpoint-mobile) {
     min-width: $mobile-width;
+    padding: 0 15px;
   }
 }
