--- a/source/sass/global/mixin.scss
+++ b/source/sass/global/mixin.scss
@@ -1,3 +1,9 @@
+@mixin no-list {
+  margin: 0;
+  padding: 0;
+  list-style: none;
+}
+
 @mixin no-outline {
   outline: none;
   background: transparent;
