--- a/source/sass/blocks/cart.scss
+++ b/source/sass/blocks/cart.scss
@@ -17,6 +17,20 @@
     padding-left: 15px;
     padding-right: 14px;
   }
+
+  & p {
+    @include font-source(26px, bold, 34px, $main-black);
+    @include clear(40px);
+    text-align: center;
+
+    @media (max-width: $breakpoint-mobile) {
+      font-size: 24px;
+      line-height: 29px;
+      width: 189px;
+      margin: 0 auto;
+      margin-bottom: 29px;
+    }
+  }
 }
 
 .cart__wrapper {
@@ -67,20 +81,6 @@
   @media (max-width: $breakpoint-mobile) {
     top: 15px;
     right: 15px;
-  }
-}
-
-.cart__title {
-  @include font-source(26px, bold, 34px, $main-black);
-  @include clear(40px);
-  text-align: center;
-
-  @media (max-width: $breakpoint-mobile) {
-    font-size: 24px;
-    line-height: 29px;
-    width: 189px;
-    margin: 0 auto;
-    margin-bottom: 29px;
   }
 }
 
@@ -208,26 +208,26 @@
     flex-direction: column;
     margin-bottom: 30px;
   }
-}
 
-.cart__text {
-  font-style: normal;
-  font-weight: normal;
-  font-size: 14px;
-  line-height: 18px;
-  margin: 0;
-
-  @media (max-width: $breakpoint-mobile) {
-    font-size: 12px;
-    line-height: 16px;
-    margin-bottom: 15px;
-  }
-
-  &--different {
-    font-weight: 500;
+  & p {
+    font-style: normal;
+    font-weight: normal;
+    font-size: 14px;
+    line-height: 18px;
+    margin: 0;
 
     @media (max-width: $breakpoint-mobile) {
-      margin-bottom: 0;
+      font-size: 12px;
+      line-height: 16px;
+      margin-bottom: 15px;
+    }
+
+    &:last-child {
+      font-weight: 500;
+
+      @media (max-width: $breakpoint-mobile) {
+        margin-bottom: 0;
+      }
     }
   }
 }
