--- a/source/sass/blocks/chjewellery.scss
+++ b/source/sass/blocks/chjewellery.scss
@@ -23,6 +23,7 @@
   & ul {
     display: flex;
     flex-flow: column wrap;
+    flex-wrap: wrap;
     align-content: space-between;
     align-items: center;
     padding: 0;
@@ -57,6 +58,7 @@
       width: 45%;
       margin-bottom: 0;
     }
+
 
     &:nth-child(2) {
       margin-bottom: 0;
