--- a/source/sass/blocks/login.scss
+++ b/source/sass/blocks/login.scss
@@ -36,34 +36,34 @@
       background-image: url("../img/bg-popup-mobile@2x.jpg");
     }
   }
-}
 
-.login__title {
-  @include font-source(34px, bold, 44px, $main-black);
-  @include clear(23px);
-  text-align: center;
+  & p {
+    @include font-source(34px, bold, 44px, $main-black);
+    @include clear(23px);
+    text-align: center;
 
-  @media (max-width: $breakpoint-mobile) {
-    font-size: 24px;
-    line-height: 31px;
-    margin-bottom: 17px;
-  }
-}
-
-.login__text {
-  @include main-font-source(14px, 500, 21px, $grey);
-  text-align: center;
-
-  & a {
-    color: $main-black;
-
-    &:hover,
-    &:focus {
-      color: $brown;
+    @media (max-width: $breakpoint-mobile) {
+      font-size: 24px;
+      line-height: 31px;
+      margin-bottom: 17px;
     }
+  }
 
-    &:active {
-      opacity: 0.7;
+  & > form > p {
+    @include main-font-source(14px, 500, 21px, $grey);
+    text-align: center;
+
+    & a {
+      color: $main-black;
+
+      &:hover,
+      &:focus {
+        color: $brown;
+      }
+
+      &:active {
+        opacity: 0.7;
+      }
     }
   }
 }
