--- a/source/sass/blocks/chjewellery.scss
+++ b/source/sass/blocks/chjewellery.scss
@@ -23,7 +23,6 @@
   & ul {
     display: flex;
     flex-flow: column wrap;
-    flex-wrap: wrap;
     align-content: space-between;
     align-items: center;
     padding: 0;
@@ -42,76 +41,75 @@
       margin: 0 auto;
     }
   }
+}
 
-  & li {
-    display: flex;
-    flex-grow: 1;
-    flex-shrink: 1;
-    width: 19.66%;
-    margin-bottom: 20px;
+.chjewellery__item {
+  display: flex;
+  flex-grow: 1;
+  flex-shrink: 1;
+  width: 19.66%;
+  margin-bottom: 20px;
 
-    @media (max-width: $breakpoint-tablet) {
-      margin-bottom: 14px;
-    }
+  @media (max-width: $breakpoint-tablet) {
+    margin-bottom: 14px;
+  }
+
+  @media (max-width: $breakpoint-mobile) {
+    width: 45%;
+    margin-bottom: 0;
+  }
+
+  &--second {
+    margin-bottom: 0;
 
     @media (max-width: $breakpoint-mobile) {
       width: 45%;
-      margin-bottom: 0;
     }
+  }
 
+  &--third {
+    width: 34.19%;
+    margin-bottom: 0;
 
-    &:nth-child(2) {
-      margin-bottom: 0;
-
-      @media (max-width: $breakpoint-mobile) {
-        width: 45%;
-      }
+    @media (max-width: $breakpoint-mobile) {
+      order: 1;
+      width: 50%;
     }
+  }
 
-    &:nth-child(3) {
-      width: 34.19%;
-      margin-bottom: 0;
+  &--fourth {
+    width: 19.83%;
 
-      @media (max-width: $breakpoint-mobile) {
-        order: 1;
-        width: 50%;
-      }
+    @media (max-width: $breakpoint-mobile) {
+      order: 1;
+      width: 50%;
     }
+  }
 
-    &:nth-child(4) {
-      width: 19.83%;
+  &--fifth {
+    width: 18.63%;
+    margin-bottom: 0;
 
-      @media (max-width: $breakpoint-mobile) {
-        order: 1;
-        width: 50%;
-      }
+    @media (max-width: $breakpoint-mobile) {
+      width: 45%;
     }
+  }
 
-    &:nth-child(5) {
-      width: 18.63%;
-      margin-bottom: 0;
+  &--sixth {
+    margin-left: 11px;
+    width: 18.63%;
 
-      @media (max-width: $breakpoint-mobile) {
-        width: 45%;
-      }
+    @media (max-width: $breakpoint-mobile) {
+      display: none;
     }
+  }
 
-    &:nth-child(6) {
-      margin-left: 11px;
-      width: 18.63%;
+  &--seventh {
+    width: 19.83%;
+    margin-bottom: 0;
 
-      @media (max-width: $breakpoint-mobile) {
-        display: none;
-      }
-    }
-
-    &:nth-child(7) {
-      width: 19.83%;
-      margin-bottom: 0;
-
-      @media (max-width: $breakpoint-mobile) {
-        display: none;
-      }
+    @media (max-width: $breakpoint-mobile) {
+      display: none;
     }
   }
 }
@@ -127,7 +125,6 @@
     margin-bottom: 62px;
   }
 }
-
 
 .chjewellery__link {
   margin: 0 auto;
