--- a/source/sass/blocks/search.scss
+++ b/source/sass/blocks/search.scss
@@ -26,11 +26,10 @@
     font-weight: 500;
     font-size: 14px;
     line-height: 21px;
-    color: $grey;
+    color: black;
 
     &:hover,
     &:focus {
-      opacity: 0.8;
       color: $main-black;
       outline: 1px solid $brown;
       outline-offset: 3px;
