--- a/source/sass/blocks/cart.scss
+++ b/source/sass/blocks/cart.scss
@@ -18,6 +18,10 @@
     padding-right: 14px;
   }
 
+  & h2 {
+    text-align: center;
+  }
+
   & p {
     @include font-source(26px, bold, 34px, $main-black);
     @include clear(40px);
@@ -26,9 +30,8 @@
     @media (max-width: $breakpoint-mobile) {
       font-size: 24px;
       line-height: 29px;
-      width: 189px;
-      margin: 0 auto;
       margin-bottom: 29px;
+      text-align: start;
     }
   }
 }
@@ -93,6 +96,7 @@
   }
 
   @media (max-width: $breakpoint-mobile) {
+    flex-shrink: 0;
     margin-right: 15px;
   }
 
@@ -217,9 +221,9 @@
     margin: 0;
 
     @media (max-width: $breakpoint-mobile) {
-      font-size: 12px;
+      font-size: 15px;
       line-height: 16px;
-      margin-bottom: 15px;
+      margin-bottom: 12px;
     }
 
     &:last-child {
@@ -261,7 +265,7 @@
     color: $main-black;
 
     @media (max-width: $breakpoint-mobile) {
-      margin-bottom: 20px;
+      margin-bottom: 23px;
     }
   }
 
@@ -292,7 +296,7 @@
   margin-right: 186px;
 
   & p {
-    @include font-source(18px, bold, 23px, $main-black);
+    @include font-source(16px, bold, 23px, $main-black);
     @include clear(9px);
 
     @media (max-width: $breakpoint-mobile) {
@@ -316,6 +320,6 @@
   }
 
   @media (max-width: $breakpoint-mobile) {
-    margin-right: 32px;
+    margin-right: 44px;
   }
 }
