--- a/source/sass/blocks/modal.scss
+++ b/source/sass/blocks/modal.scss
@@ -30,7 +30,9 @@
   }
 
   @media (max-width: $breakpoint-mobile) { 
-    top: -62px;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
   }
 }
 
