--- a/source/sass/blocks/cart.scss
+++ b/source/sass/blocks/cart.scss
@@ -19,7 +19,19 @@
   }
 
   & h2 {
-    text-align: center;
+    @media (max-width: $breakpoint-mobile) {
+      @include clear(33px);
+      margin-top: 8px;
+      padding-left: 37px;
+      padding-right: 36px;
+      text-align: center;
+      font-family: "Cormorant Garamond","Arial", sans-serif;
+      font-style: normal;
+      font-weight: bold;
+      font-size: 24px;
+      line-height: 120%;
+      color: $main-black;
+    }  
   }
 
   & p {
